<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Names -->
    <string name="app_name">Push ups Counter</string>
    <string name="startButton">Start Workout</string>
    <string name="doneButton">Done</string>
    <string name="count_text">0</string>
    <string name="logs"></string>
    <string name="volume">Volume: </string>
    <string name="SideMenu">Menu</string>
    <string name="highscore">Your High Score: </string>
    <string name="timer">00:00:00</string>
    <string name="timerText">Timer:</string>
    <string name="titleLogs">Logs:</string>
    <string name="titleHelp">Help:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="helpDone">Done</string>
    <string name="sponsor">--Sponsor--</string>
    <string name="helpCheckbox">Don\'t Show Again</string>
    
    <!-- High Scores -->
    <string name="overall">High Scores: </string>
     <string name="daily">High Scores By Day: </string>
    <string name="highScoreText">Push Ups: </string>
    <string name="caloriesText">Calories: </string>
    <string name="TimeText">Longest Workout: </string>

    <!-- Menu Items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help!</string>
    <string name="menu_reset">Reset Counter</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_history">History</string>
    <string name="menu_sAwake">Stay Awake</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear Logs and History</string>

    <!-- Activites -->
    <string name="title_activity_counter">Counter</string>
    <string name="title_activity_logs">Logs</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>

    <!-- Help Text -->
    <string name="helpText">1. Get into push up position\n\n2. Click start workout and put your device under your chest\n\n3. Start workout :)\n\n\n\nP.S If proximity sensor is not available the app will switch to light sensor. You will need good lighting for the light sensor to work correctly, you can also change counter value using the rocker buttons.	</string>

    <!-- About Text -->
    <string name="aboutText"><b>This Application Is Brought To You By Exotic Softwares\n\n\n\nVersion: 1.1\nDeveloper: Hosam Gemei</b></string>
    <string name="logo_alt">Exotics</string>

    <!-- Others -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="hello_world">Hello world!</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>

</resources>