<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Help" >

    <TextView
        android:id="@+id/titleHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleHelp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/helpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleHelp"
        android:text="@string/helpText"
        android:textSize="16sp" />
    
    <CheckBox
        android:id="@+id/helpCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/helpCheckbox" />
    
    <Button 
        android:id="@+id/helpDone" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/helpDone"
        android:onClick="helpDone" />

</RelativeLayout>