<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sponsor"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
        <!-- AdView -->

        <include layout="@layout/adview" />
    </RelativeLayout>

    <TextView
        android:id="@+id/highscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray"
        android:text="@string/highscore"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/textViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/highscore"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray" >

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerText"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/timerText"
            android:text="@string/timer"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/count_text"
        android:textSize="90sp" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" >

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/done_button"
            android:onClick="Done" />

        <Button
            android:id="@+id/PlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_toRightOf="@id/doneButton"
            android:background="@drawable/play_pause_button"
            android:onClick="PlayPause" />
    </RelativeLayout>

    <View
        android:id="@+id/touchView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons" />

</RelativeLayout>